--- a/basic/package.json
+++ b/basic/package.json
@@ -17,6 +17,7 @@
     "karma-jspm": "^2.0.0-beta.1",
     "karma-mocha": "^0.2.0",
     "karma-sinon-chai": "^1.0.0",
+    "karma-systemjs": "^0.7.0",
     "mocha": "^2.2.5"
   },
   "jspm": {
